# Minimizing-crossings-in-PSEs

./: README.md
src/: .gitignore  CMakeLists.txt  main.cpp
src/config/: FDA.json  SA.json  bruteforce.json  greedy.json
src/production/: .gitignore
src/production/input/2023/automatics/: automatic-1.json  automatic-2.json  automatic-3.json  automatic-4.json  automatic-5.json  automatic-6.json  automatic-7.json
src/production/input/2023/manuals/: manual-1.json  manual-2.json  manual-3.json  manual-4.json  manual-5.json  manual-6.json  manual-7.json
src/production/input/2024/automatics/: automatic-7.json
src/production/input/2024/manuals/: manual-1.json  manual-2.json  manual-3.json  manual-4.json  manual-5.json  manual-6.json  manual-7.json
src/source/: Drawing.h  Embedding.h  Helpers.h  InputOutput.h  Strategy.h  dependencies.h
src/strategies/: Analysis.h  Bruteforce.h  ForceDirected.h  Greedy.h  SimulatedAnnealing.h
